--- a/public/admin/admin-payments.html
+++ b/public/admin/admin-payments.html
@@ -1,221 +1,128 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LogicPals Admin — Payments</title>
-
-  
+  <title>LogicPals Console — Payments</title>
   <style>
-    :root{--bg:#f6f7fb;--card:#fff;--text:#0f172a;--muted:#64748b;--line:#e5e7eb;--accent:#4f46e5;--accent2:#06b6d4;--good:#16a34a;--warn:#b45309;--bad:#dc2626;--shadow:0 18px 45px rgba(2,6,23,.08);--r:18px}
-    *{box-sizing:border-box}body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";color:var(--text);background:linear-gradient(180deg,#ffffff 0%, #f6f7fb 100%)}
-    a{color:inherit;text-decoration:none}
-    .shell{max-width:1200px;margin:28px auto;padding:0 18px}
-    .top{display:flex;align-items:center;justify-content:space-between;gap:12px;background:var(--card);border:1px solid var(--line);border-radius:22px;padding:14px 16px;box-shadow:var(--shadow)}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:42px;height:42px;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent2));display:grid;place-items:center;color:#fff;font-weight:800}
-    .bt{font-size:14px;font-weight:800;margin:0}.st{font-size:12px;color:var(--muted);margin:0}
-    .right{display:flex;align-items:center;gap:10px;flex-wrap:wrap;justify-content:flex-end}
-    .pill{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--line);background:#fff;border-radius:999px;padding:8px 10px;font-size:13px;color:var(--muted)}
-    .dot{width:8px;height:8px;border-radius:999px;background:#94a3b8}
-    .btn{border:1px solid var(--line);background:#fff;border-radius:12px;padding:10px 12px;font-weight:700;cursor:pointer}
-    .btn.primary{background:var(--accent);border-color:var(--accent);color:#fff}
-    .btn:disabled{opacity:.55;cursor:not-allowed}
-
-    .grid{display:grid;grid-template-columns:1fr;gap:14px;margin-top:18px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:var(--r);box-shadow:var(--shadow);padding:16px}
-    .h{display:flex;align-items:center;justify-content:space-between;gap:10px}
-    .h h2{margin:0;font-size:18px}.hint{color:var(--muted);font-size:13px}
-    .form{display:grid;grid-template-columns:1.3fr .7fr;gap:12px;margin-top:12px}
-    .field{display:flex;flex-direction:column;gap:6px}
-    label{font-size:12px;color:var(--muted);font-weight:700}
-    input,select{border:1px solid var(--line);border-radius:12px;padding:10px 12px;font-size:14px;outline:none}
-    textarea{border:1px solid var(--line);border-radius:12px;padding:10px 12px;font-size:13px;min-height:160px;resize:vertical;outline:none;font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
-    .actions{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:12px}
-    .note{margin-top:8px;font-size:12px;color:var(--muted)}
-    @media (max-width:900px){.form{grid-template-columns:1fr}}
+    :root{--primary:#4F46E5;--text:#0F172A;--muted:#64748B;--border:#E2E8F0;--card:#fff;--bg:#F8FAFC;--ok:#10B981;--bad:#EF4444;}
+    *{box-sizing:border-box;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    body{margin:0;background:radial-gradient(900px 500px at 15% 10%, #EEF2FF 0%, var(--bg) 60%, #ECFEFF 100%);color:var(--text)}
+    .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 44px}
+    .top{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:14px 14px;background:rgba(255,255,255,.78);border:1px solid var(--border);border-radius:18px;backdrop-filter: blur(10px)}
+    .brand{display:flex;gap:12px;align-items:center}
+    .logo{width:44px;height:44px;border-radius:16px;background:linear-gradient(135deg,#6366F1,#22C55E);display:grid;place-items:center;color:#fff;font-weight:900}
+    .brand h1{margin:0;font-size:16px}
+    .brand p{margin:0;color:var(--muted);font-size:12px}
+    .btn{border:1px solid var(--border);background:#fff;border-radius:999px;padding:10px 12px;font-weight:800;font-size:13px;cursor:pointer}
+    .btn.primary{border-color:transparent;background:var(--primary);color:#fff}
+    .btn:disabled{opacity:.6;cursor:not-allowed}
+    .pill{padding:8px 10px;border:1px solid var(--border);border-radius:999px;background:#fff;color:var(--muted);font-size:12px;display:inline-flex;gap:8px;align-items:center}
+    .dot{width:8px;height:8px;border-radius:99px;background:var(--bad)}
+    .dot.ok{background:var(--ok)}
+    .card{margin-top:14px;background:var(--card);border:1px solid var(--border);border-radius:18px;box-shadow:0 20px 50px rgba(15,23,42,.08)}
+    .card .hd{padding:14px 14px 0}
+    .card h2{margin:0;font-size:14px}
+    .card p{margin:6px 0 0;color:var(--muted);font-size:12px}
+    .card .bd{padding:14px}
+    .box{border:1px solid var(--border);border-radius:14px;padding:12px;background:linear-gradient(180deg,#fff,#F9FAFB)}
+    pre{white-space:pre-wrap;word-break:break-word;background:#0B1220;color:#E5E7EB;border-radius:14px;padding:12px;margin:0;font-size:12px}
   </style>
-  <script src="/assets/js/env-loader.js"></script>
 </head>
-
 <body>
-  <div class="shell">
+  <div class="wrap">
     <header class="top">
       <div class="brand">
         <div class="logo">LP</div>
         <div>
-          <p class="bt">Payments</p>
-          <p class="st">Admin-only — list / refund / reconcile (RPC-only)</p>
+          <h1>Payments</h1>
+          <p>Admin-only. RPC-only. Receipt/audit enforced.</p>
         </div>
       </div>
-      <div class="right">
-        <span class="pill" id="status"><span class="dot" id="dot"></span><span id="statusTxt">Loading…</span></span>
-        <a class="btn" href="/admin.html">Back to Admin</a>
-        <button class="btn primary" id="btnSignIn">Sign in</button>
-        <button class="btn" id="btnSignOut" style="display:none">Sign out</button>
+      <div style="display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-end">
+        <span class="pill"><span id="dot" class="dot"></span><span id="auth">Checking…</span></span>
+        <button id="btnBack" class="btn" type="button">← Back to Admin</button>
+        <button id="btnSignOut" class="btn" type="button" disabled>Sign out</button>
       </div>
     </header>
 
-    <div class="grid">
-      <section class="card">
-        <div class="h">
-          <h2>Payment Operations</h2>
-          <div class="hint" id="who"></div>
+    <section class="card">
+      <div class="hd">
+        <h2>Console</h2>
+        <p>Wire these controls only after the payment RPCs are QC-verified.</p>
+      </div>
+      <div class="bd">
+        <div class="box">
+          <div style="display:flex;gap:10px;flex-wrap:wrap">
+            <button class="btn primary" id="btnList" type="button" disabled>List recent receipts (RPC)</button>
+            <button class="btn" id="btnRefund" type="button" disabled>Refund (RPC)</button>
+          </div>
+          <div style="height:10px"></div>
+          <pre id="out">—</pre>
         </div>
-
-        <div class="form">
-          <div class="field">
-            <label>Customer email</label>
-            <input id="email" placeholder="student_or_parent@email.com" autocomplete="email" />
-          </div>
-          <div class="field">
-            <label>Track</label>
-            <select id="track">
-              <option value="regular">Regular</option>
-              <option value="olympiad">Olympiad</option>
-            </select>
-          </div>
-
-          <div class="field">
-            <label>Action</label>
-            <select id="action">
-              <option value="list">List payments</option>
-              <option value="refund">Refund payment</option>
-              <option value="reconcile">Reconcile payment</option>
-            </select>
-          </div>
-          <div class="field">
-            <label>Reference (receipt/txn id)</label>
-            <input id="ref" placeholder="optional" />
-          </div>
-        </div>
-
-        <div class="actions">
-          <button class="btn primary" id="run">Run</button>
-          <button class="btn" id="trust">Load trust summary</button>
-        </div>
-
-        <p class="note">Expected RPCs: <code>admin_list_payments</code>, <code>admin_refund_payment</code>, <code>admin_reconcile_payment</code>, <code>admin_trust_summary</code>. (If your function names differ, tell me and I will wire them.)</p>
-      </section>
-
-      <section class="card">
-        <div class="h"><h2>Output</h2><div class="hint">RPC responses + errors</div></div>
-        <textarea id="out" readonly>Waiting…</textarea>
-      </section>
-    </div>
+      </div>
+    </section>
   </div>
 
-  <dialog id="dlg" style="border:none;border-radius:16px;max-width:420px;width:calc(100% - 24px);padding:0;box-shadow:0 20px 70px rgba(2,6,23,.25)">
-    <form method="dialog" style="padding:16px 16px 14px;background:#fff;border:1px solid var(--line);border-radius:16px">
-      <div style="display:flex;align-items:center;justify-content:space-between;gap:10px">
-        <div style="font-weight:900">Admin sign in</div>
-        <button class="btn" value="cancel">✕</button>
-      </div>
-      <div style="margin-top:12px;display:flex;flex-direction:column;gap:10px">
-        <div class="field"><label>Email</label><input id="lgEmail" type="email" autocomplete="email" required placeholder="admin@email.com"/></div>
-        <div class="field"><label>Password</label><input id="lgPass" type="password" autocomplete="current-password" required /></div>
-        <button class="btn primary" id="doLogin" value="default">Sign in</button>
-        <div class="hint" id="authOut"></div>
-      </div>
-    </form>
-  </dialog>
-
+  <script type="module" src="/assets/js/env-loader.js"></script>
   <script type="module">
-    import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
-
-    const env = window.__LP_ENV || {};
-    const SUPABASE_URL = env.SUPABASE_URL;
-    const SUPABASE_ANON_KEY = env.SUPABASE_ANON_KEY;
-
     const $ = (id) => document.getElementById(id);
-    const setStatus = (kind, msg) => {
-      $('statusTxt').textContent = msg;
-      const dot = $('dot');
-      dot.style.background = kind === 'good' ? 'var(--good)' : kind === 'bad' ? 'var(--bad)' : kind === 'warn' ? 'var(--warn)' : '#94a3b8';
-    };
-    const log = (obj) => { $('out').value = typeof obj === 'string' ? obj : JSON.stringify(obj, null, 2); };
-    const openDlg = () => $('dlg').showModal();
-    const closeDlg = () => $('dlg').close();
 
-    if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
-      setStatus('bad', 'Missing env');
-      log('Missing window.__LP_ENV (SUPABASE_URL / SUPABASE_ANON_KEY). Open /api/env and confirm it loads.');
-      $('btnSignIn').disabled = true;
-      throw new Error('Missing env');
+    function setAuth(ok, msg){
+      $('dot').className = 'dot' + (ok ? ' ok' : '');
+      $('auth').textContent = msg;
     }
 
-    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY, { auth: { persistSession: true } });
-
-    async function refreshAuthUI(){
-      const { data: { session } } = await supabase.auth.getSession();
-      if (session?.user) {
-        $('who').textContent = `Signed in: ${session.user.email}`;
-        $('btnSignIn').style.display = 'none';
-        $('btnSignOut').style.display = 'inline-flex';
-        setStatus('good', 'Ready');
-      } else {
-        $('who').textContent = 'Signed out';
-        $('btnSignIn').style.display = 'inline-flex';
-        $('btnSignOut').style.display = 'none';
-        setStatus('warn', 'Sign in required');
+    async function safeGetRole(client){
+      try{
+        const { data, error } = await client.rpc('get_my_role');
+        if (error) throw error;
+        return (data && (data.role || data)) || 'unknown';
+      } catch {
+        return 'unknown';
       }
     }
 
-    $('btnSignIn').addEventListener('click', openDlg);
-    $('btnSignOut').addEventListener('click', async () => { await supabase.auth.signOut(); await refreshAuthUI(); });
-
-    $('doLogin').addEventListener('click', async (e) => {
-      e.preventDefault();
-      $('authOut').textContent = 'Signing in…';
-      const { error } = await supabase.auth.signInWithPassword({ email: $('lgEmail').value.trim(), password: $('lgPass').value });
-      if (error) { $('authOut').textContent = error.message; return; }
-      $('authOut').textContent = '';
-      closeDlg();
-      await refreshAuthUI();
-    });
-
-    async function callRpc(name, args){
-      const { data, error } = await supabase.rpc(name, args);
-      if (error) throw error;
-      return data;
+    async function requireSuperAdmin(){
+      const client = await window.lpGetClient();
+      const { data } = await client.auth.getSession();
+      if (!data?.session?.user) {
+        location.replace('/admin-login.html?next=' + encodeURIComponent('/admin/admin-payments.html'));
+        return null;
+      }
+      const role = await safeGetRole(client);
+      if (role !== 'super_admin'){
+        setAuth(false, 'Denied (role: ' + role + ')');
+        $('out').textContent = 'Access denied: super_admin required.';
+        return null;
+      }
+      setAuth(true, 'Auth ok (super_admin)');
+      $('btnSignOut').disabled = false;
+      $('btnList').disabled = false;
+      $('btnRefund').disabled = false;
+      return client;
     }
 
-    $('run').addEventListener('click', async () => {
-      try {
-        setStatus('', 'Running…');
-        const email = $('email').value.trim();
-        const track = $('track').value;
-        const ref = $('ref').value.trim() || null;
-        if (!email) { log('Please enter customer email.'); setStatus('warn','Missing email'); return; }
-        const action = $('action').value;
-        const rpc = action === 'refund' ? 'admin_refund_payment' : action === 'reconcile' ? 'admin_reconcile_payment' : 'admin_list_payments';
-        const result = await callRpc(rpc, { p_email: email, p_track: track, p_reference: ref });
-        log({ rpc, args: { email, track, ref }, result });
-        setStatus('good','Ready');
-      } catch (err) {
-        log({ error: err?.message || String(err), details: err });
-        setStatus('bad','Error');
-      }
+    $('btnBack').addEventListener('click', () => location.href = '/admin.html');
+    $('btnSignOut').addEventListener('click', async () => {
+      const client = await window.lpGetClient();
+      await client.auth.signOut();
+      location.replace('/admin.html');
     });
 
-    $('trust').addEventListener('click', async () => {
-      try {
-        setStatus('', 'Running…');
-        const email = $('email').value.trim();
-        if (!email) { log('Please enter customer email.'); setStatus('warn','Missing email'); return; }
-        const track = $('track').value;
-        const result = await callRpc('admin_trust_summary', { p_email: email, p_track: track });
-        log({ rpc: 'admin_trust_summary', args: { email, track }, result });
-        setStatus('good','Ready');
-      } catch (err) {
-        log({ error: err?.message || String(err), details: err });
-        setStatus('bad','Error');
-      }
+    $('btnList').addEventListener('click', async () => {
+      const client = await requireSuperAdmin();
+      if (!client) return;
+      $('out').textContent = 'RPC not wired yet (QC pending).';
     });
 
-    setStatus('', 'Loading…');
-    await refreshAuthUI();
-    supabase.auth.onAuthStateChange(() => refreshAuthUI());
+    $('btnRefund').addEventListener('click', async () => {
+      const client = await requireSuperAdmin();
+      if (!client) return;
+      $('out').textContent = 'Refund RPC not wired yet (QC pending).';
+    });
+
+    requireSuperAdmin();
   </script>
 </body>
 </html>
