Fix env boot race + unify auth storageKey across pages

--- a/public/learn.html
+++ b/public/learn.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Outfit:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="/subscription-guard.js" defer></script>
+    <script src="/assets/js/subscription-guard.js" defer></script>
     <style>
         :root{--primary:#6c5ce7;--success:#00d2a0;--warning:#feca57;--bg:#0c0e1a;--card:rgba(20,24,52,.55);--border:rgba(255,255,255,.06);--text:#f0f0f5;--text2:#9899b3;--muted:#5d5f7e;--bad:#ff6b6b;--as:rgba(108,92,231,.12);--ys:rgba(254,202,87,.10);--glow:rgba(108,92,231,.35);--font:'Plus Jakarta Sans',-apple-system,sans-serif;--font-d:'Outfit',-apple-system,sans-serif;--font-m:'JetBrains Mono',monospace;}
         *{box-sizing:border-box;margin:0;padding:0;}
